# RenderAPI

./: CMakeLists.txt  README.md  build.txt
AR/: ar.h  main.c  main.cpp
AR/AR/: Common.h  Core.h  Renderer.cpp  Renderer.h  Utils.h  VulkanContext.cpp  VulkanContext.h
AR/src/: Core.h  ExternalAPI.c  ExternalAPI.h  Instance.c  Instance.h  Internal.h  InternalAPI.h  Utils.c
AR/src/internal_modules/: Instance.h  PhysicalDevice.h
lib/linux/vulkan/include/clang/AST/: AttrDump.inc  AttrImpl.inc  AttrVisitor.inc  Attrs.inc
lib/linux/vulkan/include/clang/Basic/: AttrHasAttributeImpl.inc  AttrList.inc
lib/linux/vulkan/include/clang/Config/: config.h
lib/linux/vulkan/include/clang/Sema/: AttrParsedAttrImpl.inc  AttrParsedAttrKinds.inc  AttrParsedAttrList.inc  AttrSpellingListIndex.inc  AttrTemplateInstantiate.inc
lib/linux/vulkan/include/clang/Serialization/: AttrPCHRead.inc  AttrPCHWrite.inc
lib/linux/vulkan/include/llvm/Config/: llvm-config.h
lib/linux/vulkan/lib/: libspirv-cross-c-shared.so.0  libspirv-cross-c-shared.so.0.44.0
lib/linux/vulkan/lib/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc  shaderc.pc  shaderc_combined.pc  shaderc_static.pc  spirv-cross-c-shared.pc  vulkan.pc
old/: ar.h  main.c
old/src/: Common.h  Utils.h  Vulkan.c  Vulkan.h
src/: main.c
